tests/models/struct/unnamed/u32/pass/le.rs
use dade::model;
#[model]
struct TestModel (
   #[field(le = 2)]
    u32
);
fn main() {}
