tests/models/struct/unnamed/u32/fail/min_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_length = 2)]
    u32
);
fn main() {}
